fix bug 54841. zero out the first 128 bits of the representatble r=sr=erik